--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.19.2",
     "bcrypt-nodejs": "0.0.3",
+    "echarts": "^4.7.0",
     "element-ui": "^2.13.1",
     "express-session": "^1.17.1",
     "jsonwebtoken": "^8.5.1",
