--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "popper.js": "^1.16.1",
     "qrcodejs2": "0.0.2",
     "sass-loader": "^7.3.1",
+    "segment": "^0.1.3",
     "sequelize": "^5.21.7",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
